tests/language_modules/15_qualified_names_calls/invalid_semantics/qualified_procedure_used_as_expression.vf
module Qualified.ProcedureAsExpression

procedure touch()
is
    check true
end touch

procedure main()
is
    let total: Integer = Qualified.ProcedureAsExpression.touch()
    check total = 1
end main

end Qualified.ProcedureAsExpression